# 16th-problem

./: .gitignore  .travis.yml  README.md  appveyor.yml
Visualization/: Visualization.sln
Visualization/Visualization/: Program.cs  Visualization.csproj
Visualization/Visualization/Graphics/: Drawer.cs  EditorForm.cs  Form.Designer.cs
Visualization/Visualization/Logic/: Cycles.cs  DiffEqSystem.cs  Result.cs
Visualization/Visualization/Properties/: AssemblyInfo.cs
scripts/: before_build_linux.sh  before_build_mac.sh  build.sh
solver/: .travis.yml  CMakeLists.txt  main.c
solver/include/: CustomDataTypes.h  Files.h  Logic.h  SingularPoints.h  Structures.h  Test_SingularPoints.h  Tests.h
solver/src/: Files.c  Logic.c  SingularPoints.c  Structures.c  Test_SingularPoints.c
